syntax = "proto3";

package ca;

option go_package = "github.com/rhine-team/RHINE-Prototype/offlineAuth/components/ca";

// Service offered by the ca
service CAService {
  rpc SubmitNewDelegCA (SubmitNewDelegCARequest) returns (SubmitNewDelegCAResponse) {}
}

message RhineSig {
  bytes Data = 1;
  bytes Sig = 2;
  string DataPostfix = 3;
}


message SubmitNewDelegCARequest {
  RhineSig Acsr = 1;
  bytes Rcertp = 2;
  bytes Rid = 3;
}


message SubmitNewDelegCAResponse {
  bytes Rcertc = 1;
  repeated bytes Lcfms = 2;
  bytes Rid = 3;
}
